--- a/index.html
+++ b/index.html
@@ -5873,6 +5873,13 @@
 </tr>
 
 <tr>
+<td>Eastern Color</td>
+<td>1933</td>
+<td>Publisher</td>
+<td><a href="EasternColor/EasternColor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>EC Comics</td>
 <td>1944</td>
 <td>Publisher</td>
