--- a/ReglarFellers/ReglarFellers.html
+++ b/ReglarFellers/ReglarFellers.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="Reg'larFellers.jpg"> <br>
-Series: 1917 - 1949<br>
-Publisher: Cupples &amp; Leon, Eastman Color<br>
+From 1917 - 1949 by Cupples &amp; Leon<br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
