--- a/index.html
+++ b/index.html
@@ -13178,14 +13178,14 @@
 <tr>
 <td>Reg'lar Fellers</td>
 <td>1917</td>
-<td>Eastman</td>
+<td>Cupples &amp; Leon</td>
 <td><a href="ReglarFellers/ReglarFellers.html">Details</a></td>
 </tr>
 
 <tr>
 <td>Reg'lar Fellers Heroic Comics</td>
 <td>1940</td>
-<td>Eastman</td>
+<td>Eastern Color</td>
 <td><a href="ReglarFellersHeroicComics/ReglarFellersHeroicComics.html">Details</a></td>
 </tr>
 
