--- a/ReglarFellersHeroicComics/ReglarFellersHeroicComics.html
+++ b/ReglarFellersHeroicComics/ReglarFellersHeroicComics.html
@@ -9,11 +9,10 @@
 
 <body>
 <img src="Reg'larFellersHeroicComics1.jpg"> <br>
-Series: 1940<br>
-Illustrator: Bill Everett<br>
-Publisher: Eastman Color<br>
+1940 by Eastern Color<br>
 <p>
-Featuring characters like Hydroman, Joyce Church, The Great One.<br>
+Featuring characters like Hydroman, Joyce Church, The Great One. Illustrated by Bill Everett.
+</p><p>
 During an experiment with a new, revolutionary chemical, chemist Harry Thurston's left hand is turned into a water spout. Bob Blake is called in and another accident turns his entire body into a water spout. Fortunately, a counter-active chemical is used on both and they are restored. Blake decides to take injections of the chemical and become Hydroman, who must then combat a horde of alien invaders led by The Great One.
 </p><p>
 <div class="row"><div class="column">
