--- a/index.html
+++ b/index.html
@@ -5978,6 +5978,13 @@
 </tr>
 
 <tr>
+<td>Eerie Publications</td>
+<td>1966</td>
+<td>Publisher</td>
+<td><a href="EeriePublications/EeriePublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Effigy</td>
 <td>2015</td>
 <td>Vertigo</td>
