--- a/index.html
+++ b/index.html
@@ -6027,6 +6027,13 @@
 </tr>
 
 <tr>
+<td>Eisner &amp; Iger</td>
+<td>1936</td>
+<td>Publisher</td>
+<td><a href="EisnerIger/EisnerIger.html">Details</a></td>
+</tr>
+
+<tr>
 <td>El Zombo Fantasma</td>
 <td>2004</td>
 <td>Dark Horse</td>
