--- a/index.html
+++ b/index.html
@@ -6083,6 +6083,13 @@
 </tr>
 
 <tr>
+<td>Elliot Publishing</td>
+<td>1941</td>
+<td>Publisher</td>
+<td><a href="ElliotPublishing/ElliotPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Elric</td>
 <td>1983</td>
 <td>PC</td>
@@ -6157,6 +6164,13 @@
 <td>1992</td>
 <td>Epic</td>
 <td><a href="Epic/Epic.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Epic Comics</td>
+<td>1982</td>
+<td>Publisher</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
