--- a/SpicyTales/SpicyTales.html
+++ b/SpicyTales/SpicyTales.html
@@ -9,10 +9,9 @@
 
 <body>
 <img src="SpicyTales1.jpg"> <br>
-Series: 20 issues 1988 - 1990<br>
-Publisher: Etermity (Malibu)<br>
+20 issues from 1988 - 1990 by <a href="../EternityComics/EternityComics.html">Eternity</a> (Malibu)<br>
 <p>
-Classic tales of pre-code adventure and passion for mature readers. Reprints comics printed originally in the <a href="https://blzimg.github.io/SpicyAdventureStories/SpicyAdventureStories.html">Spicy</a> line of pulp magazines.
+Classic tales of pre-code adventure and passion for mature readers. Reprints comics printed originally in the <a href="../SpicyAdventureStories/SpicyAdventureStories.html">Spicy Adventure Stories</a> pulp magazines.
 </p><p>
 
 </p>
