--- a/index.html
+++ b/index.html
@@ -6272,6 +6272,13 @@
 </tr>
 
 <tr>
+<td>Eternity Comics</td>
+<td>1985</td>
+<td>Publisher</td>
+<td><a href="EternityComics/EternityComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ethan Van Sciver</td>
 <td>1974</td>
 <td>Creator</td>
