--- a/AmazingStories/AmazingStories.html
+++ b/AmazingStories/AmazingStories.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="AmazingStories01.jpg"  title="1926 April"> <br>
-Series: 1926 Sci-Fi Magazine, 1985 TV series<br>
-Publisher: Experimenter Publishing, NBC <br>
+1926 Sci-Fi Magazine, 1985 TV series, by <a href="../ExperimenterPublishing/ExperimenterPublishing.html">Experimenter Publishing</a>, and <a href="../NBC/NBC.html">NBC</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor"></div></div>
