--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
 </tr>
 
 <tr>
+<td>20th Century Fox</td>
+<td>1935</td>
+<td>Publisher</td>
+<td><a href="20thCenturyFox/20thCenturyFox.html">Details</a></td>
+</tr>
+
+<tr>
 <td>21 Down</td>
 <td>2002</td>
 <td>DC</td>
