--- a/PacificComics/PacificComics.html
+++ b/PacificComics/PacificComics.html
@@ -22,33 +22,39 @@ Another invitee was then-aspiring artist Dave Stevens, who purchased comics from
 </p><p>
 Writer Jay Allen Sanford stated that Pacific "formed the template for Image Comics."
 </p><p>
-<li><a href="../CorbenSpecial/CorbenSpecial.html">A Corben Special</a>
-<li><a href="../AlienWorlds/AlienWorlds.html">Alien Worlds</a>
-<li><a href="../DemonDreams/DemonDreams.html">Arthur Suydam's Demon Dreams</a>
-<li><a href="../BerniWrightsonMasterMacabre/BerniWrightsonMasterMacabre.html">Berni Wrightson Master of the Macabre</a>
-<li><a href="../BoldAdventure/BoldAdventure.html">Bold Adventure</a>
-<li><a href="../CaptainVictory/CaptainVictory.html">Captain Victory and the Galactic Rangers</a>
-<li><a href="../Darklon/Darklon.html">Darklon the Mystic</a>
-<li><a href="../EdgeOfChaos/EdgeOfChaos.html">Edge of Chaos</a>
-<li><a href="../Elric/elric.html">Elric of Melniboné</a>
-<li><a href="../Groo/Groo.html">Groo the Wanderer</a>
-<li><a href="../1stFolio/1stFolio.html">Joe Kubert's 1st Folio</a>
-<li><a href="../MsMystic/MsMystic.html">Ms. Mystic</a>
-<li><a href="../One/One.html">One</a> (First Pacific Comic)
-<li><a href="../PacificPresents/PacificPresents.html">Pacific Presents</a>
-<li><a href="PacificComics1.jpg">Pathways To Fantasy</a>
+<li><a href="../CorbenSpecial/CorbenSpecial.html">A Corben Special</a> (1984)
+<li><a href="../AlienWorlds/AlienWorlds.html">Alien Worlds</a> (1982)
+<li>Art of Al Williamson (1983)
+<li><a href="../DemonDreams/DemonDreams.html">Arthur Suydam's Demon Dreams</a> (1984)
+<li><a href="../BerniWrightsonMasterMacabre/BerniWrightsonMasterMacabre.html">Berni Wrightson Master of the Macabre</a> (1983)
+<li><a href="../BoldAdventure/BoldAdventure.html">Bold Adventure</a> (1983)
+<li><a href="../CaptainVictory/CaptainVictory.html">Captain Victory and the Galactic Rangers</a> (1981)
+<li><a href="../Rog2000/Rog2000.html">Complete Rog 2000</a> (1982)
+<li><a href="../Darklon/Darklon.html">Darklon the Mystic</a> (1983)
+<li><a href="../EdgeOfChaos/EdgeOfChaos.html">Edge of Chaos</a> (1983)
+<li><a href="../Elric/elric.html">Elric of Melniboné</a> (1983)
+<li>Famous Movie Stars of the 30's (1984)
+<li>Ghita of Alizarr (1983)
+<li><a href="../Groo/Groo.html">Groo the Wanderer</a> (1982)
+<li><a href="../1stFolio/1stFolio.html">Joe Kubert's 1st Folio</a> (1984)
+<li><a href="../MsMystic/MsMystic.html">Ms. Mystic</a> (1982)
+<li><a href="../One/One.html">One</a> (1977)
+<li><a href="../PacificPresents/PacificPresents.html">Pacific Presents</a> (1982)
+<li><a href="PacificComics1.jpg">Pathways To Fantasy</a> (1984)
+<li>Planet Comics (1984)
 <li><a href="../Rocketeer/Rocketeer.html">The Rocketeer</a>
-<li><a href="../Rog2000/Rog2000.html">Rog-2000</a>
-<li><a href="../Silverstar/Silverstar.html">Silver Star</a>
-<li><a href="../Silverheels/Silverheels.html">Silverheels</a>
-<li>Skateman
-<li><a href="../SomersetHolmes/SomersetHolmes.html">Somerset Holmes</a>
-<li>Starslayer
-<li>Sun Runners
-<li>Twisted Tales
-<li>Vanguard Illustrated
-<li>Vanity
-<li>Wild Animals
+<li>Ravens and Rainbows (1983)
+<li><a href="../Silverstar/Silverstar.html">Silver Star</a> (1983)
+<li><a href="../Silverheels/Silverheels.html">Silverheels</a> (1983)
+<li>Skateman (1983)
+<li><a href="../SomersetHolmes/SomersetHolmes.html">Somerset Holmes</a> (1983)
+<li>Starslayer (1982)
+<li>Sun Runners (1984)
+<li>Thillogy (1984)
+<li>Twisted Tales (1982)
+<li>Vanguard Illustrated (1983)
+<li>Vanity (1984)
+<li>Wild Animals (1982)
 </p>
 
 </body>
