--- a/index.html
+++ b/index.html
@@ -2036,7 +2036,7 @@
 <tr>
 <td>Atomic Comics</td>
 <td>1946</td>
-<td>Green Publishing</td>
+<td>Green</td>
 <td><a href="AtomicComics/AtomicComics.html">Details</a></td>
 </tr>
 
@@ -6842,6 +6842,13 @@
 </tr>
 
 <tr>
+<td>Fox Publications</td>
+<td>1939</td>
+<td>Publisher</td>
+<td><a href="FoxPublications/FoxPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fraggle Rock</td>
 <td>1983</td>
 <td>Jim Henson</td>
@@ -7042,6 +7049,13 @@
 <td>1847</td>
 <td>Creator</td>
 <td><a href="GabrielFerrier/GabrielFerrier.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Gainax</td>
+<td>1984</td>
+<td>Publisher</td>
+<td><a href="Gainax/Gainax.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7633,6 +7647,13 @@
 </tr>
 
 <tr>
+<td>Green Publishing</td>
+<td>1945</td>
+<td>Publisher</td>
+<td><a href="GreenPublishing/GreenPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Guardians of Infinity</td>
 <td>2015</td>
 <td>Marvel</td>
@@ -7776,6 +7797,13 @@
 <td>2005</td>
 <td>DC</td>
 <td><a href="BalladOfHaloJones/BalladOfHaloJones.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hanna-Barbera</td>
+<td>1957</td>
+<td>Publisher</td>
+<td><a href="HannaBarbera/HannaBarbera.html">Details</a> </td>
 </tr>
 
 <tr>
@@ -16305,7 +16333,7 @@
 </tr>
 
 <tr>
-<td>Vertigo</td>
+<td>Vertigo Comics</td>
 <td>1993</td>
 <td>Publisher</td>
 <td><a href="Vertigo/Vertigo.html">Details</a></td>
