--- a/Warren/Warren.html
+++ b/Warren/Warren.html
@@ -30,24 +30,30 @@ Begun by James Warren, Warren Publishing's initial publications were the horror-
 </p><p>
 After introducing what he called "Monster Comics" in Monster World, Warren expanded in 1964 with horror-comics stories in the sister magazines Creepy and Eerie – black-and-white publications in a standard magazine format, rather than comic-book size, and selling for 35 cents as opposed to the standard comic-book price of 12 cents. Such a format, Warren explained, averted the restrictions of the Comics Code Authority, the comic-book industry's self-censorship body.
 </p><p>
-    <li>Famous Monsters of Filmland (1958–1983, 191 issues)
-    <li><a href="../Help/Help.html">Help!</a> (1960–1965, 26 issues)
-    <li><a href="../Spacemen/Spacemen.html">Spacemen</a> (1961)
-    <li>Screen Thrills Illustrated (1963, ten issues)
-    <li><a href="../MonsterWorld/MonsterWorld.html">Monster World</a> (1964, ten issues)
-    <li>Famous Films (1964)
-    <li><a href="../Creepy/Creepy.html">Creepy</a> (1964–1983, 145 issues)
-    <li><a href="../BlazingCombat/BlazingCombat.html">Blazing Combat</a> (1965)
-    <li><a href="../Eerie/Eerie.html">Eerie</a> (1966–1983, 139 issues)
-    <li>On The Scene / Freak Out USA (1967, two issues)
-    <li>Teen Love Stories (1967, three issues)
-    <li><a href="../Vampirella/Vampirella.html">Vampirella</a> (1969–1983, 112 issues)
-    <li><a href="../Spirit/Spirit.html">The Spirit</a> (1974, 17 Warren issues)
-    <li><a href="../ComixInternational/ComixInternational.html">Comix International</a> (1974, five issues)
-    <li><a href="../1984/1984.html">1984</a> (retitled 1994 in 1980)
-    <li>The Rook (Oct. 1979 - April 1982, 14 issues)
-    <li><a href="../WarrenPresents/WarrenPresents.html">Warren Comic</a> (1979)
-    <li>The Goblin (1982, three issues)
+<li><a href="../1984/1984.html">1984</a> (1978)
+<li><a href="../BlazingCombat/BlazingCombat.html">Blazing Combat</a> (1965)
+<li><a href="../ComixInternational/ComixInternational.html">Comix International</a> (1974)
+<li><a href="../Creepy/Creepy.html">Creepy</a> (1964)
+<li>Dracula (1972)
+<li><a href="../Eerie/Eerie.html">Eerie</a> (1966)
+<li>Famous Films (1964)
+<li>Famous Monsters of Filmland (1958)
+<li>Galactic Wars Comix (1978)
+<li>Goblin (1982)
+<li><a href="../Help/Help.html">Help!</a> (1960)
+<li><a href="../MonsterWorld/MonsterWorld.html">Monster World</a> (1964)
+<li>Mr. Chips and the Mystery of the Chocolate Mountain
+<li>Odd Comic World of Richard Corben (1977)
+<li>Rook (1979)
+<li>On The Scene / Freak Out USA (1967)
+<li>Screen Thrills Illustrated (1963)
+<li><a href="../Spacemen/Spacemen.html">Spacemen</a> (1961)
+<li><a href="../Spirit/Spirit.html">The Spirit</a> (1974)
+<li>Teen Love Stories (1967)
+<li>U.F.O. and Alien Comix (1967)
+<li><a href="../Vampirella/Vampirella.html">Vampirella</a> (1969)
+<li><a href="../WarrenPresents/WarrenPresents.html">Warren Presents</a> (1969)
+
 </p>
 
 </body>
