--- a/index.html
+++ b/index.html
@@ -8529,6 +8529,13 @@
 </tr>
 
 <tr>
+<td>Iger Studio Publications</td>
+<td>1945</td>
+<td>Publisher</td>
+<td><a href="IgerStudioPublications/IgerStudioPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Iggy Pop</td>
 <td>1947</td>
 <td>Creator</td>
