--- a/index.html
+++ b/index.html
@@ -12535,6 +12535,14 @@
 </tr>
 
 <tr>
+<td>Overstreet Comic Book Price Guide</td>
+<td>1970</td>
+<td>Gemstone</td>
+<td><a href="Overstreet/Overstreet.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td><a name ="p">P Craig Russell</td>
 <td>1951</td>
 <td>Creator</td>
