--- a/index.html
+++ b/index.html
@@ -8810,6 +8810,13 @@
 </tr>
 
 <tr>
+<td>IPC</td>
+<td>1963</td>
+<td>Publisher</td>
+<td><a href="IPC/IPC.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Iron Fist</td>
 <td>1975</td>
 <td>Marvel</td>
@@ -12540,7 +12547,6 @@
 <td>Gemstone</td>
 <td><a href="Overstreet/Overstreet.html">Details</a></td>
 </tr>
-
 
 <tr>
 <td><a name ="p">P Craig Russell</td>
