--- a/index.html
+++ b/index.html
@@ -9090,6 +9090,13 @@
 </tr>
 
 <tr>
+<td>Jim Henson Company</td>
+<td>1954</td>
+<td>Publisher</td>
+<td><a href="JimHensonCompany/JimHensonCompany.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jim Lee</td>
 <td>1964</td>
 <td>Creator</td>
