--- a/index.html
+++ b/index.html
@@ -7465,6 +7465,13 @@
 </tr>
 
 <tr>
+<td>Gold Key</td>
+<td>1962</td>
+<td>Publisher</td>
+<td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Golden Age of Marvel Comics</td>
 <td>2009</td>
 <td>Marvel</td>
