--- a/index.html
+++ b/index.html
@@ -9917,6 +9917,13 @@
 </tr>
 
 <tr>
+<td>Legendary Comics</td>
+<td>2010</td>
+<td>Publisher</td>
+<td><a href="LegendaryComics/LegendaryComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Legion of Monsters</td>
 <td>1975</td>
 <td>Marvel</td>
