--- a/index.html
+++ b/index.html
@@ -9973,6 +9973,13 @@
 </tr>
 
 <tr>
+<td>Lev Gleason Publications</td>
+<td>1939</td>
+<td>Publisher</td>
+<td><a href="LevGleason/LevGleason.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lieutenant Blueberry</td>
 <td>1991</td>
 <td>Epic</td>
