--- a/index.html
+++ b/index.html
@@ -10280,7 +10280,6 @@
 <td><a href="Lucasfilm/Lucasfilm.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>Lucien Victor Guirand de Sccevola</td>
 <td>1871</td>
@@ -10370,6 +10369,13 @@
 <td>1990</td>
 <td>Tundra</td>
 <td><a href="Madman/Madman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Magazine Enterprises</td>
+<td>1943</td>
+<td>Publisher</td>
+<td><a href="MagazineEnterprises/MagazineEnterprises.html">Details</a></td>
 </tr>
 
 <tr>
