--- a/index.html
+++ b/index.html
@@ -11219,6 +11219,13 @@
 </tr>
 
 <tr>
+<td>Metro Goldwyn Mayer</td>
+<td>1924</td>
+<td>Publisher</td>
+<td><a href="MGM/MGM.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Metropol</td>
 <td>1991</td>
 <td>Epic</td>
