--- a/index.html
+++ b/index.html
@@ -12143,6 +12143,13 @@
 </tr>
 
 <tr>
+<td>New Yorker</td>
+<td>1925</td>
+<td>Advance</td>
+<td><a href="NewYorker/NewYorker.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Newspaper Enterprise Association</td>
 <td>1902</td>
 <td>Publisher</td>
