--- a/NewYorker/NewYorker.html
+++ b/NewYorker/NewYorker.html
@@ -38,15 +38,22 @@
 <div class="mySlides" style="text-align: center;"><img src="NewYorker18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker20.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="NewYorker21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker21a.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker21b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker21c.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker22.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker23.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker24.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker25.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="NewYorker26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker26a.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker26b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker26c.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker26d.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker27.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker28.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker29b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker29c.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker30.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker31.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker32.jpg"></div>
