--- a/index.html
+++ b/index.html
@@ -12192,6 +12192,13 @@
 </tr>
 
 <tr>
+<td>Nickelodeon</td>
+<td>1977</td>
+<td>Publisher</td>
+<td><a href="Nickelodeon/Nickelodeon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Night Flight</td>
 <td>1981</td>
 <td>USA Network</td>
