--- a/index.html
+++ b/index.html
@@ -11401,6 +11401,13 @@
 </tr>
 
 <tr>
+<td>Mirage Studios</td>
+<td>1983</td>
+<td>Publisher</td>
+<td><a href="MirageStudios/MirageStudios.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Miss America Comics</td>
 <td>1941</td>
 <td>Marvel</td>
@@ -11447,6 +11454,13 @@
 <td>1948</td>
 <td>Timely</td>
 <td><a href="Mitzi/Mitzi.html">Details</a></td>
+</tr>
+
+<tr>
+<td>MLJ Magazines</td>
+<td>1939</td>
+<td>Publisher</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
