--- a/AtlasComics/AtlasComics.html
+++ b/AtlasComics/AtlasComics.html
@@ -16,85 +16,85 @@ This company is distinct from the 1970s comic-book company, also founded by Good
 </p><p>
 Atlas Comics was the successor of Timely Comics, the company that magazine and paperback novel publisher Martin Goodman founded in 1939, and which had reached the peak of its popularity during the war years with its star characters the Human Torch, the Sub-Mariner and Captain America. The early to mid-1950s found comic books falling out of fashion due to competition from television and other media.
 </p><p>
-<li><a href="../ActualRomances/actualromances.html">Actual Romances</a> 	1949 	 	
-<li><a href="../AdventureIntoMystery/adventureintomystery.html">Adventure Into Mystery</a> 	1956 	 	
-<li><a href="../AdventuresIntoWeirdWorlds/adventuresintoweirdworlds.html">Adventures into Weird Worlds</a> 	1952 	 	
-<li>Adventures of Pinky Lee 	1955 	 	
-<li>All Teen Comics 	1947 	 	
-<li>All True Crime 	1950 	 	
-<li>All True Crime Cases 	1947 	 	
-<li>All Western Winners 	1948 	 	
-<li>All Winners 	1948 	 	
-<li>Annie Oakley 	1948 	 	
-<li>Apache Kid 	1950 	 	
-<li>Arizona Kid 	1950 	 	
-<li>Arrowhead 	1954 	 	
-<li>Astonishing 	1951 	 	
-<li>Black Rider 	1948 	 	
-<li>Buck Duck 	1993 	 	
-<li>Combat 	1952 	 	
-<li>Combat Casey 	1952 	 	
-<li>Combat Kelly 	1951 	 	
-<li>Commando Adventures 	1957 	 	
-<li>Devil-Dog Dugan 	1956 	 	
-<li>Dexter the Demon 	1957 	 	
-<li>Gunsmoke Western 	1948 	 	
-<li>Hedy 	1947 	 	
-<li>Jann of the Jungle 	1955 	 	
-<li>Jeanie Comics 	1947 	 	
-<li>Joker Comics 	1941 	 	
-<li>Jungle Action 	1954 	 	
-<li>Justice Comics 	1947 	 	
-<li>Lawbreakers Always Lose! 	1948 	 	
-<li>Love Adventures 	1949 	 	
-<li>Marines at War 	1956 	 	
-<li>Menace 	1953 	 	
-<li>My Love 	1949 	 	
-<li>Mystery Tales 	1952 	 	
-<li>Mystic Comics 	1940 	 	
-<li>Mystical Tales 	1956 	 	
-<li>Navy Action 	1954 	 	
-<li>Navy Combat 	1955 	 	
-<li>Navy Tales 	1957 	 	
-<li>Official True Crimes Cases 	1947 	 	
-<li>Our Love 	1949 	 	
-<li>Outlaw Fighters 	1954 	 	
-<li>Outlaw Kid 	1954 	 	
-<li>Private Eye 	1951 	 	
-<li>Quick-Trigger Western 	1954 	 	
-<li>Rangeland Love 	1949 	 	
-<li>Rawhide Kid 	1955 	 	
-<li>Ringo Kid 	1954 	 	
-<li>Romance Diary 	1949 	 	
-<li>Romance Tales 	1949 	 	
-<li>Rugged Action 	1954 	 	
-<li>Sgt. Barney Barker 	1956 	 	
-<li>Six-Gun Western 	1957 	 	
-<li>Space Squadron 	1951 	 	
-<li>Spaceman 	1953 	 	
-<li>Spellbound 	1952 	 	
-<li>Stories of Romance 	1956 	 	
-<li>Strange Stories of Suspense 	1955 	 	
-<li>Strange Tales of the Unusual 	1955 	 	
-<li>Strange Worlds 	1958 	 	
-<li>Tales of the Marines 	1956 	 	
-<li>Teen Comics 	1947 	 	
-<li>Tessie the Typist 	1944 	 	
-<li>True Complete Mystery 	1949 	 	
-<li>True Secrets 	1949 	 	
-<li>True Tales of Love 	1956 	 	
-<li>War Action 	1952 	 	
-<li>War Adventures 	1952 	 	
-<li>War Combat 	1952 	 	
-<li>War Comics 	1950 	 	
-<li>Western Tales of Black Rider 	1948 	 	
-<li>Western Thrillers 	1954 	 	
-<li>Western Winners 	1948 	 
-<li>Wild 	1954 	 	
-<li>Wild West 	1948 	 	
-<li>Wild Western 	1948 	 	
-<li>World of Mystery 	1956 	 	
-<li>World of Suspense 	1956 	
+<li><a href="../ActualRomances/actualromances.html">Actual Romances</a>   (1949)
+<li><a href="../AdventureIntoMystery/adventureintomystery.html">Adventure Into Mystery</a>  (1956)
+<li><a href="../AdventuresIntoWeirdWorlds/adventuresintoweirdworlds.html">Adventures into Weird Worlds</a>   (1952)
+<li><a href="../PinkyLee/pinkylee.html">Adventures of Pinky Lee</a> (1955)
+<li><a href="../AllTeen/AllTeen.html">All Teen Comics</a>  (1947)
+<li><a href="../AllTrueCrime/AllTrueCrime.html">All True Crime</a> (1950)
+<li><a href="../AllTrueCrimeCases/AllTrueCrimeCases.html">All True Crime Cases</a>    (1947)
+<li><a href="../AllWinners/AllWinners.html">All Western Winners</a>     (1948)
+<li><a href="../AllWinners1941/AllWinners1941.html">All Winners</a>     (1948)
+<li><a href="../AnnieOakley/AnnieOakley.html">Annie Oakley</a>    (1948)
+<li><a href="../ApacheKid/ApacheKid.html">Apache Kid</a>  (1950)
+<li><a href="../ArizonaKid/ArizonaKid.html">Arizona Kid</a>     (1950)
+<li><a href="../Arrowhead/Arrowhead.html">Arrowhead </a>  (1954)
+<li><a href="../Astonishing/Astonishing.html">Astonishing</a>     (1951)
+<li>Black Rider     (1948)
+<li>Buck Duck   (1993)
+<li>Combat  (1952)
+<li>Combat Casey    (1952)
+<li>Combat Kelly    (1951)
+<li>Commando Adventures     (1957)
+<li>Devil-Dog Dugan     (1956)
+<li>Dexter the Demon    (1957)
+<li>Gunsmoke Western    (1948)
+<li>Hedy    (1947)
+<li>Jann of the Jungle  (1955)
+<li>Jeanie Comics   (1947)
+<li>Joker Comics    (1941)
+<li>Jungle Action   (1954)
+<li>Justice Comics  (1947)
+<li>Lawbreakers Always Lose!    (1948)
+<li>Love Adventures     (1949)
+<li>Marines at War  (1956)
+<li>Menace  (1953)
+<li>My Love     (1949)
+<li>Mystery Tales   (1952)
+<li>Mystic Comics   (1940)
+<li>Mystical Tales  (1956)
+<li>Navy Action     (1954)
+<li>Navy Combat     (1955)
+<li>Navy Tales  (1957)
+<li>Official True Crimes Cases  (1947)
+<li>Our Love    (1949)
+<li>Outlaw Fighters     (1954)
+<li>Outlaw Kid  (1954)
+<li>Private Eye     (1951)
+<li>Quick-Trigger Western   (1954)
+<li>Rangeland Love    (1949)
+<li>Rawhide Kid     (1955)
+<li>Ringo Kid   (1954)
+<li>Romance Diary  ( 194)
+<li>Romance Tales   (1949)
+<li>Rugged Action    (1954)
+<li>Sgt. Barney Barker    (1956)
+<li>Six-Gun Western     (1957)
+<li>Space Squadron    (1951)
+<li>Spaceman    (1953)
+<li>Spellbound    (1952)
+<li>Stories of Romance    (1956)
+<li>Strange Stories of Suspense     (1955)
+<li>Strange Tales of the Unusual    (1955)
+<li>Strange Worlds    (1958)
+<li>Tales of the Marines    (1956)
+<li>Teen Comics     (1947)
+<li>Tessie the Typist   (1944)
+<li>True Complete Mystery   (1949)
+<li>True Secrets    (1949)
+<li>True Tales of Love    (1956)
+<li>War Action    (1952)
+<li>War Adventures    (1952)
+<li>War Combat    (1952)
+<li>War Comics    (1950)
+<li>Western Tales of Black Rider    (1948)
+<li>Western Thrillers   (1954)
+<li>Western Winners     (1948)
+<li>Wild    (1954)
+<li>Wild West     (1948)
+<li>Wild Western    (1948)
+<li>World of Mystery    (1956)
+<li>World of Suspense   (1956)
 </p>
 </body>
 </html>
