--- a/NewYorker/NewYorker.html
+++ b/NewYorker/NewYorker.html
@@ -61,6 +61,16 @@
 <div class="mySlides" style="text-align: center;"><img src="NewYorker34.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker35.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="NewYorker36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="NewYorker46.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
