--- a/ACComics/ACComics.html
+++ b/ACComics/ACComics.html
@@ -18,7 +18,24 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ACComics17.jpg"></div>
+
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,14 +49,23 @@ Based on its focus on Golden Age reprints and stories inspired by that style, AC
 </p><p>
 Titles
 </p><p>
-<li>America's Greatest Comics (2002)
-<li>Americomics (1983)
-<li>Americomics Special (1983)
-<li>Bad Girl Backlash (1995)
-<li>The Best of the West (1998)
-<li>Big 'Uns (1998)
-<li>Bill Black's Fun Comics (1982)
-<li>Black Diamond (1983)
+<li><a href="ACComics1.jpg">AC Annual</a> (1990)
+<li><a href="ACComics2.jpg">All Hitler Comics</a> (2000)
+<li><a href="ACComics3.jpg">Amazon Warriors</a> (1989)
+<li><a href="ACComics4.jpg">America's Greatest Comics</a> (2002)
+<li><a href="ACComics5.jpg">Americomics</a> (1983)
+<li><a href="ACComics6.jpg">Americomics Special</a> (1983)
+<li><a href="ACComics7.jpg">ArmageddonFactor</a> (1987)
+<li><a href="ACComics8.jpg">Avenger</a> (1996)
+<li><a href="ACComics9.jpg">Bad Girl Backlash</a> (1995)
+<li><a href="ACComics10.jpg">Barbarians and Beauties</a> (1990)
+<li><a href="ACComics11.jpg">Best of the West</a> (1998)
+<li><a href="ACComics12.jpg">Big 'Uns</a> (1998)
+<li><a href="ACComics13.jpg">Big Bang Universe</a> (2015)
+<li><a href="ACComics14.jpg">Big Girl Adventures</a> (2001)
+<li><a href="ACComics15.jpg">Bill Black's Fun Comics</a> (1982)
+<li><a href="ACComics16.jpg">Black Diamond</a> (1983)
+<li><a href="ACComics17.jpg">Black Phantom</a> (1989)
 <li>Captain Paragon (1983)
 <li>Dragonfly (1985)
 <li>Faze 1 Fazers (1986)
