--- a/AftershockComics/AftershockComics.html
+++ b/AftershockComics/AftershockComics.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="Aftershock.jpg">
+<img src="Aftershock1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,7 +18,10 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Aftershock4.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -36,10 +39,10 @@ The label attracted attention in 2016 when it published Paul Jenkins' comic Alte
 </p><p>
 Titles
 </p><p>
-<li>2016 Aftershock Retailer Preview (2016)
-<li>Aftershock Genesis (2016)
-<li>Alters (2016)
-<li>American Monster (2016)
+<li><a href="Aftershock2.jpg">Aftershock Retailer Preview</a> (2016)
+<li><a href="Aftershock3.jpg">Aftershock Genesis</a> (2016)
+<li><a href="Aftershock4.jpg">Alters</a> (2016)
+<li><a href="../AmericanMonster/AmericanMonster.html">American Monster</a> (2016)
 <li>Animosity (2016)
 <li>Animosity: Evolution (2017)
 <li>Animosity: The Rise (2017)
