--- a/index.html
+++ b/index.html
@@ -1523,6 +1523,13 @@
 </tr>
 
 <tr>
+<td>American Monster</td>
+<td>2016</td>
+<td>Aftershock</td>
+<td><a href="AmericanMonster/AmericanMonster.html">Details</a></td>
+</tr>
+
+<tr>
 <td>American Splendor</td>
 <td>1976</td>
 <td>Dark Horse</td>
