New Line Cinema

--- a/index.html
+++ b/index.html
@@ -12122,6 +12122,13 @@
 </tr>
 
 <tr>
+<td>New Line Cinema</td>
+<td>1967</td>
+<td>Publisher</td>
+<td><a href="NewLineCinema/NewLineCinema.html">Details</a></td>
+</tr>
+
+<tr>
 <td>New Mangaverse</td>
 <td>2002</td>
 <td>Marvel</td>
