New Line Cinema

--- a/NewLineCinema/NewLineCinema.html
+++ b/NewLineCinema/NewLineCinema.html
@@ -39,13 +39,13 @@ Titles
 <li>Dumb and Dumber (1994)
 <li>Elf (2003)
 <li><a href="../EvilDead/EvilDead.html">Evil Dead</a> (1981)
-<li>Hobbit: An Unexpected Journey   (2012)
-<li>Hobbit: The Battle of the Five Armies   (2014)
-<li>Hobbit: The Desolation of Smaug (2013)
+<li><a href="../MiddleEarth/MiddleEarth.html">Hobbit: An Unexpected Journey</a>   (2012)
+<li><a href="../MiddleEarth/MiddleEarth.html">Hobbit: The Battle of the Five Armies</a>   (2014)
+<li><a href="../MiddleEarth/MiddleEarth.html">Hobbit: The Desolation of Smaug</a> (2013)
 <li>It  (2017)
-<li>Lord of the Rings: The Fellowship of the Ring  (2001)
-<li>Lord of the Rings: The Return of the King  (2003)
-<li>Lord of the Rings: The Two Towers (2002)
+<li><a href="../MiddleEarth/MiddleEarth.html">Lord of the Rings: The Fellowship of the Ring</a>  (2001)
+<li><a href="../MiddleEarth/MiddleEarth.html">Lord of the Rings: The Return of the King</a>  (2003)
+<li><a href="../MiddleEarth/MiddleEarth.html">Lord of the Rings: The Two Towers</a> (2002)
 <li>Mask    (1994)
 <li>Mr. Deeds   (2002)
 <li><a href="../NightmareOnElmStreet/NightmareOnElmStreet.html">Nightmare on Elm Street</a> (1984)
