--- a/index.html
+++ b/index.html
@@ -8263,6 +8263,13 @@
 </tr>
 
 <tr>
+<td>Hobbit</td>
+<td>1937</td>
+<td>Warner Bros</td>
+<td><a href="MiddleEarth/MiddleEarth.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hokum &amp; Hex</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -10173,6 +10180,13 @@
 <td>1985</td>
 <td>Marvel</td>
 <td><a href="Longshot/Longshot.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lord of the Rings</td>
+<td>1937</td>
+<td>Warner Bros</td>
+<td><a href="MiddleEarth/MiddleEarth.html">Details</a></td>
 </tr>
 
 <tr>
