--- a/revenue.html
+++ b/revenue.html
@@ -227,7 +227,7 @@
 <td>Fist of the North Star</td><td>1983</td><td>18.30</td><td>Toei, Sega</td><td>Details</td>
 </tr>
 <tr>
-<td>Barbie</td><td>1959</td><td>24.00</td><td>Mattel</td><td>Details</td>
+<td>Barbie</td><td>1959</td><td>24.00</td><td>Mattel</td><td><a href="Barbie/Barbie.html">Details</a></td>
 </tr>
 <tr>
 <td>Final Fantasy</td><td>1987</td><td>11.90</td><td>Square Enix</td><td>Details</td>
@@ -251,7 +251,7 @@
 <td>Twilight</td><td>2005</td><td>06.15</td><td>Summit</td><td>Details</td>
 </tr>
 <tr>
-<td>Aladdin</td><td>1992</td><td>06.85</td><td>Disney</td><td>Details</td>
+<td>Aladdin</td><td>1992</td><td>06.85</td><td>Disney</td><td><a href="Aladdin/aladdin.html">Details</a></td>
 </tr>
 <tr>
 <td>Shonen Jump</td><td>1968</td><td>34.20</td><td>Bandai Namco</td><td>Details</td>
@@ -308,7 +308,7 @@
 <td>Lego Movie</td><td>2014</td><td>03.57</td><td>AT &amp; T</td><td>Details</td>
 </tr>
 <tr>
-<td>Avatar</td><td>2009</td><td>03.40</td><td>Fox</td><td>Details</td>
+<td>Avatar</td><td>2009</td><td>03.40</td><td>Fox</td><td><a href="AvatarTheLastAirbender/AvatarTheLastAirbender.html">Details</a></td>
 </tr>
 <tr>
 <td>Power Puff Girls</td><td>1998</td><td>02.50</td><td>AT &amp; T</td><td>Details</td>
@@ -320,10 +320,10 @@
 <td>Anpanman</td><td>1973</td><td>60.00</td><td>Froebel-kan</td><td>Details</td>
 </tr>
 <tr>
-<td>Game of Thrones</td><td>1996</td><td>05.81</td><td>AT &amp; T</td><td>Details</td>
+<td>Game of Thrones</td><td>1996</td><td>05.81</td><td>AT &amp; T</td><td><a href="GameOfThrones/GameOfThrones.html">Details</a></td>
 </tr>
 <tr>
-<td>Avengers</td><td>1963</td><td>13.40</td><td>Disney</td><td>Details</td>
+<td>Avengers</td><td>1963</td><td>13.40</td><td>Disney</td><td><a href="Avengers/Avengers.html">Details</a></td>
 </tr>
 <tr>
 <td>Bleach</td><td>2001</td><td>07.24</td><td>Shueisha</td><td>Details</td>
@@ -332,7 +332,7 @@
 <td>Bob the Builder</td><td>1998</td><td>05.00</td><td>DHX Media</td><td>Details</td>
 </tr>
 <tr>
-<td>Peanuts</td><td>1950</td><td>17.40</td><td>DHX Media</td><td>Details</td>
+<td>Peanuts</td><td>1950</td><td>17.40</td><td>DHX Media</td><td><a href="Peanuts/Peanuts.html">Details</a></td>
 </tr>
 <tr>
 <td>Looney Tunes</td><td>1930</td><td>14.30</td><td>AT &amp; T</td><td>Details</td>
