--- a/index.html
+++ b/index.html
@@ -17125,6 +17125,13 @@
 </tr>
 
 <tr>
+<td>Winnie the Pooh</td>
+<td>1926</td>
+<td>Disney</td>
+<td><a href="WinnieThePooh/WinnieThePooh.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Winsor McCay</td>
 <td>1866</td>
 <td>Creator</td>
