--- a/revenue.html
+++ b/revenue.html
@@ -221,7 +221,7 @@
 <td>My Little Pony</td><td>2010</td><td>01.00</td><td>Hasbro</td><td><a href="MyLittlePony/MyLittlePony.html">Details</a></td>
 </tr>
 <tr>
-<td>Winnie the Pooh</td><td>1966</td><td>16.00</td><td>Disney</td><td>Details</td>
+<td>Winnie the Pooh</td><td>1966</td><td>16.00</td><td>Disney</td><td><a href="WinnieThePooh/WinnieThePooh.html">Details</a></td>
 </tr>
 <tr>
 <td>Fist of the North Star</td><td>1983</td><td>18.30</td><td>Toei, Sega</td><td>Details</td>
@@ -242,7 +242,7 @@
 <td>Dispicable Me</td><td>2010</td><td>06.99</td><td>Illumination Entertainment</td><td>Details</td>
 </tr>
 <tr>
-<td>Hulk</td><td>1962</td><td>06.78</td><td>Disney</td><td>Details</td>
+<td>Hulk</td><td>1962</td><td>06.78</td><td>Disney</td><td><a href="Hulk/Hulk.html">Details</a></td>
 </tr>
 <tr>
 <td>Donkey Kong</td><td>1981</td><td>06.37</td><td>Nintendo</td><td>Details</td>
@@ -314,7 +314,7 @@
 <td>Power Puff Girls</td><td>1998</td><td>02.50</td><td>AT &amp; T</td><td>Details</td>
 </tr>
 <tr>
-<td>Winnie the Pooh</td><td>1924</td><td>75.00</td><td>Disney</td><td>Details</td>
+<td>Winnie the Pooh</td><td>1924</td><td>75.00</td><td>Disney</td><td><a href="WinnieThePooh/WinnieThePooh.html">Details</a></td>
 </tr>
 <tr>
 <td>Anpanman</td><td>1973</td><td>60.00</td><td>Froebel-kan</td><td>Details</td>
