--- a/index.html
+++ b/index.html
@@ -3485,6 +3485,13 @@
 </tr>
 
 <tr>
+<td>Capstone Publishers</td>
+<td>1991</td>
+<td>Publisher</td>
+<td><a href="Capstone/Capstone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Aero</td>
 <td>1941</td>
 <td>Temerson</td>
