--- a/index.html
+++ b/index.html
@@ -10045,7 +10045,7 @@
 <tr>
 <td>Little Annie Fanny</td>
 <td>1962</td>
-<td>Playboy</td>
+<td>Darkhorse</td>
 <td><a href="LittleAnnieFanny/LittleAnnieFanny.html">Details</a></td>
 </tr>
 
