--- a/index.html
+++ b/index.html
@@ -14331,6 +14331,13 @@
 </tr>
 
 <tr>
+<td>Shadowrun</td>
+<td>1989</td>
+<td>FASA</td>
+<td><a href="Shadowrun/Shadowrun.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shadows&amp;Light</td>
 <td>1998</td>
 <td>Marvel</td>
