--- a/index.html
+++ b/index.html
@@ -12801,6 +12801,13 @@
 </tr>
 
 <tr>
+<td>Perdita Durango</td>
+<td>1992</td>
+<td>Rivages</td>
+<td><a href="PerditaDurango/PerditaDurango.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Perhapanauts</td>
 <td>2005</td>
 <td>Dark Horse</td>
