--- a/index.html
+++ b/index.html
@@ -6230,6 +6230,13 @@
 </tr>
 
 <tr>
+<td>Erik Johansson</td>
+<td>1985</td>
+<td>Creator</td>
+<td><a href="ErikJohansson/ErikJohansson.html">Details</a><td>
+</tr>
+
+<tr>
 <td>Ernst Fuchs</td>
 <td>1930</td>
 <td>Creator</td>
