Masters of the Universe

--- a/index.html
+++ b/index.html
@@ -11086,6 +11086,13 @@
 </tr>
 
 <tr>
+<td>Masters of the Universe</td>
+<td>1982</td>
+<td>Mattel</td>
+<td><a href="MastersOfTheUniverse/MastersOfTheUniverse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Matt Slade Gunfighter</td>
 <td>1956</td>
 <td>Marvel</td>
