--- a/RedSonja/RedSonja.html
+++ b/RedSonja/RedSonja.html
@@ -51,6 +51,7 @@ Red Sonja is a 1985 Dutch-American sword and sorcery action film directed by Ric
 <div class="mySlides" style="text-align: center;"><img src="RedSonja1983series4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RedSonjaPinUp1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="RedSonjaPinUp2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RedSonja2019series01.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
