--- a/index.html
+++ b/index.html
@@ -13417,7 +13417,7 @@
 <td>Red Sonja</td>
 <td>1973</td>
 <td>Marvel</td>
-<td><a href="/RedSonja/RedSonja.html">Details</a></td>
+<td><a href="RedSonja/RedSonja.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14846,6 +14846,13 @@
 <td>1942</td>
 <td>Columbia</td>
 <td><a href="SparkyWatts/SparkyWatts.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spectrum: The Best in Contemporary Fantastic Art</td>
+<td>2003</td>
+<td>Underwood Books</td>
+<td><a href="Spectrum/Spectrum.html">Details</a></td>
 </tr>
 
 <tr>
