--- a/JackKirby/JackKirby.html
+++ b/JackKirby/JackKirby.html
@@ -47,6 +47,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Kirby27.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kirby28.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Kirby29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Kirby30.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
