--- a/index.html
+++ b/index.html
@@ -13274,7 +13274,14 @@
 </tr>
 
 <tr>
-<td><a name ="q">Quality Comics</td>
+<td><a name ="q">Quadralien</td>
+<td>1988</td>
+<td>Logotron</td>
+<td><a href="Quadralien/Quadralien.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Quality Comics</td>
 <td>1937</td>
 <td>Publisher</td>
 <td><a href="QualityComics/QualityComics.html">Details</a></td>
