--- a/Quadralien/Quadralien.html
+++ b/Quadralien/Quadralien.html
@@ -19,6 +19,9 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="Quadralien1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quadralien2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quadralien3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Quadralien4.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
