Comics Buyers Guide

--- a/index.html
+++ b/index.html
@@ -4164,6 +4164,13 @@
 </tr>
 
 <tr>
+<td>Comics Buyer's Guide</td>
+<td>1971</td>
+<td>F+W Media</td>
+<td><a href="ComicsBuyersGuide/ComicsBuyersGuide.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Comics Journal</td>
 <td>1977</td>
 <td>Fantagraphics</td>
