--- a/index.html
+++ b/index.html
@@ -11527,6 +11527,13 @@
 </tr>
 
 <tr>
+<td>Modesty Blaze</td>
+<td>1963</td>
+<td>Hall Syndicate</td>
+<td><a href="ModestyBlaze/ModestyBlaze.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Moebius</td>
 <td>1987</td>
 <td>Epic</td>
